Upgrade to Java 9, removed version numbers of dependencies managed by Spring Boot